added level colours in gui